fixed alignment of image in nav header. beer lists are all now centered on page.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,6 +16,7 @@
 
 body {
     padding: 20px;
+    margin: auto;
     margin-top: 40px;
     background-color: whitesmoke;
 }
@@ -56,7 +57,7 @@ header .logo-small {
 
 .logo-small img {
     width: 50px;
-    height: 50px;
+    height: 53px;
 }
 
 header nav .navLeft {
@@ -114,6 +115,15 @@ div.nav-grid a img.new-beer {
     width: 150px;
     height: 108px;
     margin-top: -10px;
+}
+
+.info-page {
+    width: 40%;
+    margin: auto;
+}
+
+.info-page h1 {
+    margin-left: 10px;
 }
 
 div.info-list ul {
